# VRPTW-Research-Optimization

./: .eslintrc.json  .firebaserc  .gitignore  CLAUDE.md  DDQN_ALNS_Presentation.pptx  Dockerfile  Dockerfile.firebase  Makefile  README.md  Template poster NCKHSV.pptx  VRPTW.ipynb  benchmark_checkpoint.csv  benchmark_checkpoint_backup.csv  benchmark_clean.csv  benchmark_main_v17.csv  c101.txt  docker-compose.yml  firebase.json  generate_vrp_distribution.py  main.py  nexus.json  package-lock.json  package.json  pyproject.toml  report-draft1.tex  requirements.txt  research_audit.md  rl_alns_dr_v15.safetensors  root@192.168.2.139  run_all_benchmarks.sh  run_full_production.sh  run_multiscale_benchmark.sh  secret  vite.config.js  vrptw.ipynb  vrptw.py  vrptw_clean.py  vrptw_v11.ipynb  vrptw_v11_clean.ipynb
.agents/: AGENTS.md
.firebase/: hosting.ZGlzdA.cache  hosting.cHVibGlj.cache
__pycache__/: vrptw._route_cost-236.py312.1.nbc  vrptw._route_cost-236.py312.nbi  vrptw._route_ok-244.py312.1.nbc  vrptw._route_ok-244.py312.nbi
dashboard/: README.md  VRPTW-Research-Optimization.code-workspace  index.html
docs/: Bao_Cao_Nghien_Cuu_VRPTW_Poster.pptx  Bao_Cao_Tom_Tat_VRPTW.docx  Bao_Cao_Tom_Tat_VRPTW.md  Cong_Trinh_Nghien_Cuu_VRPTW.md  Poster_VRPTW_DDQN_ALNS.pptx  README.md  claude_vrptw_bundle.md  comprehensive_report.md  fig3.tex  generate_docx_report.py  optimo_route_comparison.md  paper.aux  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  poster_NCKHSV.html  report-draft1.tex  requirements.txt  rl_alns_dr_v15.safetensors  run_benchmark.py  thesis.aux  thesis.fdb_latexmk  thesis.fls  thesis.out  thesis.tex  vrptw_clean.py
elite_plans/: C102.json  C103.json  C104.json  C107.json  C201.json  C202.json  C203.json  R101.json  R102.json  R103.json  R104.json  R105.json  R106.json  R107.json  R108.json  R109.json  R110.json  R111.json  R112.json  R201.json  R202.json  R203.json  R204.json  R205.json  R206.json  R207.json  R208.json  R209.json  R210.json  R211.json  RC101.json  RC102.json  RC103.json  RC105.json  RC106.json  RC107.json  RC108.json  RC201.json  RC202.json  RC203.json  (+5 more)
legacy/: hybrid-rl-alns-for-vrptw-2.ipynb  hybrid-rl-alns-for-vrptw-4.ipynb  hybrid-rl-alns-for-vrptw-5.ipynb  hybrid-rl-alns-for-vrptw-a9b129.ipynb  hybrid-rl-alns-v5-patched.ipynb  hybrid-rl-alns-v6_1.ipynb  hybrid_MRSO_LNS.ipynb  vrptw.py
logs/: benchmark_clean.csv  customers_import_test.csv  nexus_demo.json
logs_test_oropt/: benchmark_clean.csv
model/: rl_alns_transfer.safetensors
output_new_bench/: benchmark_checkpoint.csv
past-reports/: 1233.docx  nexus_demo.json  nexus_v2.html  report-draft1.tex  v9_6_patch.md  vrptw_root.ipynb  vrptw_v11_pure_rl.ipynb
scratch/: analyze_paper_stats.py  analyze_suite.py  benchmark_gnn.py  calc_effect_sizes.py  calculate_all_stats.py  check_leakage_overfit.py  compile_benchmark_report.py  debug_reduction_rc101.py  demolish_ortools.py  find_full_benchmark.py  gap_calculator.py  generate_bundle.py  sample.txt  (+24 more)
(+1171 files in other folders)
