[project]
name = "vrptw-research-optimization"
version = "0.1.0"
description = "VRPTW DDQN-ALNS research and FastAPI demo"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "httpx>=0.28",
    "pydantic>=2.11",
    "firebase-admin>=7.0",
    "python-dotenv>=1.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.0",
    "numpy>=1.26,<2.3",
    "pandas>=2.2",
    "scipy>=1.13",
    "numba>=0.60",
    "torch>=2.4",
    "safetensors>=0.4",
    "matplotlib>=3.8",
    "python-multipart>=0.0.7",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "playwright>=1.41",
    "pytest-playwright>=0.4"
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["docs", "logs", "model", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008", "B905"]

[tool.pyright]
extraPaths = ["docs", "src"]
